--- a/index.html
+++ b/index.html
@@ -1,1 +1,237 @@
-Hello World
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Anderson Uchôa - Pontifical Catholic University of Rio de Janeiro</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="author" content="Anderson Uchôa">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+        <meta name="description" content="Anderson Uchôa Faculty Page" />
+        <meta name="keywords" content="faculty profile, anderson uchoa, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
+
+        <link rel="shortcut icon" href="../favicon.ico">
+
+        <!--CSS styles-->
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/perfect-scrollbar-0.4.5.min.css">
+        <link rel="stylesheet" href="css/magnific-popup.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link id="theme-style" rel="stylesheet" href="css/styles/blue.css">
+
+
+
+        <!--/CSS styles-->
+        <!--Javascript files-->
+        <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+        <script type="text/javascript" src="js/TweenMax.min.js"></script>
+        <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+        <script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
+
+        <script type="text/javascript" src="js/modernizr.custom.63321.js"></script>
+        <script type="text/javascript" src="js/jquery.dropdownit.js"></script>
+
+        <script type="text/javascript" src="js/jquery.stellar.min.js"></script>
+        <script type="text/javascript" src="js/ScrollToPlugin.min.js"></script>
+
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+        <script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
+
+        <script type="text/javascript" src="js/masonry.min.js"></script>
+
+        <script type="text/javascript" src="js/perfect-scrollbar-0.4.5.with-mousewheel.min.js"></script>
+
+        <script type="text/javascript" src="js/magnific-popup.js"></script>
+        <script type="text/javascript" src="js/custom.js"></script>
+
+        <!--/Javascript files-->
+
+    </head>
+    <body>
+
+        <div id="wrapper">
+            <a href="#sidebar" class="mobilemenu"><i class="icon-reorder"></i></a>
+            <div id="sidebar">
+                <div id="main-nav">
+                    <div id="nav-container">
+                        <div id="profile" class="clearfix">
+							<a href="http://www.inf.puc-rio.br/" target="_new"><img alt="image" width="230" src="img/logo_di.png"></a>
+                            <div class="portrate hidden-xs"></div>
+                            <div class="title">
+                                <h2>Anderson Uchôa</h2>
+                                <h3>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</h3>
+                            </div>
+                        </div>
+                        <ul id="navigation">
+                            <li class="currentmenu">
+                              <a href="index.html">
+                                <div class="icon icon-user"></div>
+								<div class="text">About Me</div>
+                              </a>
+                            </li>
+
+                            <li>
+                              <a href="research.html">
+                                <div class="icon icon-book"></div>
+                                <div class="text">Research</div>
+                              </a>
+                            </li>
+
+                            <li>
+                              <a href="publication.html">
+                                <div class="icon icon-edit"></div>
+                                <div class="text">Publications</div>
+                              </a>
+                            </li>
+
+                            <li>
+                              <a href="http://lattes.cnpq.br/1095304607841635" target="_new">
+                                  <div class="icon icon-download-alt"></div>
+                                  <div class="text">CV Lattes (in Portuguese)</div>
+                              </a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="social-icons">
+                  <ul>
+                      <li><a href="https://www.facebook.com/anderson.goncalvesuchoa" target="_new"><i class="icon-facebook"></i></a></li>
+                      <li><a href="https://twitter.com/andersonguchoa" target="_new"><i class="icon-twitter"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/andersongnuchoa/" target="_new"><i class="icon-linkedin"></i></a></li>
+                  </ul>
+                </div>
+            </div>
+
+            <div id="main">
+
+                <div id="biography" class="page home" data-pos="home">
+                    <div class="pageheader">
+                        <div class="headercontent">
+                            <div class="section-container">
+
+                                <div class="row">
+                                    <div class="col-sm-2 visible-sm"></div>
+                                    <div class="col-sm-8 col-md-4">
+                                        <div class="biothumb">
+                                            <br>
+											<img alt="image" src="img/personal/personal-big.png" class="img-responsive">
+											<p>@ Beijing, China - October 2015.
+											                  </div>
+
+                                    </div>
+                                    <div class="clearfix visible-sm visible-xs"></div>
+                                    <div class="col-sm-12 col-md-7">
+                                        <h3 class="title">Position & Short Bio</h3>
+                                        <p> MSc student in the <a href="http://www.inf.puc-rio.br" target="_new">Department of Informatics</a> at <a href="http://www.puc-rio.br" target="_new">PUC-Rio</a>.  The postgraduate program of the Department of Informatics is evaluated by the Brazilian Federal Agency for Postgraduate Education (CAPES) as being of international excellence (maximum score, 7). According to the <a href="http://www.timeshighereducation.com/world-university-rankings/2017/latin-america-university-rankings" target="_new">Times Higher Education Latin America University Rankings 2017</a>, PUC-Rio is one of the Top 10 universities in the continent and the leader in partnerships with industry.</p>
+
+                                        <p>Member of the <a href="http://opus.les.inf.puc-rio.br/wordpress/">OPUS Research Group </a> at PUC-Rio under the guidance of professor <a href="http://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Dr. Alessandro Garcia</a></p>
+
+
+                                        <p>He holds a degree in Software Engineering from <a href="http://ufc.br/" target="_new">UFC</a> (Federal University of Ceará with a “sandwich” period at <a href="http://www.di.uniroma1.it/" target="_new">La Sapienza (Sapienza University of Rome)</a>. </p>
+
+                                        <p>His main research interests are code smells, software maintenance and evolution, software reuse and mining software repositories. His research are available in <a href="publication.html">publications</a>. </p>
+
+										                     <p>Feel free to contact me. Specially if you are a researcher searching for collaboration.</p>
+
+										<a href="http://www.inf.puc-rio.br/" target="_new">Departamento de Informática - PUC-Rio</a><br>
+										Rua Marquês de São Vicente 225, 22451-900, Gavea, Rio de Janeiro, RJ, Brazil<br>
+										<strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>auchoa [at] inf.puc-rio.br<br>
+
+										<p>Spoken Languages: English (intermediary); Italian (fluent); Portuguese (mother language).</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="pagecontents">
+                        <div class="section color-1">
+                            <div class="section-container">
+                                <div class="row">
+                                    <div class="col-md-5 col-md-offset-1">
+                                        <div class="title text-center">
+                                            <h3>Academic Positions</h3>
+                                        </div>
+                                        <ul class="ul-dates">
+                                            <li>
+                                                <div class="dates">
+                                                    <span>Present</span>
+                                                    <span>2017</span>
+                                                </div>
+                                                <div class="content">
+                                                    <h4>M.Sc. Student in Software Engineering </h4>
+                                                    <p><em>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</em>, Department of Informatics</p>
+                                                </div>
+                                            </li>
+
+											              </div>
+                                    <div class="col-md-5">
+                                        <div class="title text-center">
+                                            <h3>Academic Degrees</h3>
+                                        </div>
+                                        <ul class="ul-card">
+                                            <li>
+                                                <div class="dy">
+                                                    <span class="degree">M.Sc.</span>
+                                                    <span class="year">Present</span>
+                                                </div>
+                                                <div class="description">
+                                                    <p class="waht">M.Sc. in Software Engineering, PUC-Rio</p>
+													<p class="where">Advisor: <a href="http://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Alessandro Garcia</a></p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="dy">
+                                                    <span class="degree">B.Sc.</span><span class="year">2016</span>
+                                                </div>
+                                                <div class="description">
+                                                    <p class="waht">Bachelor in Software Engineering</p>
+                                                    <p class="where">Federal University of Ceará (UFC) with a sandwich period at Sapienza University of Rome (SAPIENZA).</p>
+													<p class="where">Advisor: <a href="http://lattes.cnpq.br/4277471687235814" target="_new">Carla Ilane</a></p>
+                                                </div>
+                                            </li>
+
+
+
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-10 col-md-offset-1">
+                                        <div class="title text-center">
+                                            <h3><br>Honors, Awards and Grants (Selection)</h3>
+											<h4>Click on each award title to see a summary. </h4>
+                                        </div>
+                                        <ul class="timeline">
+
+                                            <li class="open">
+                                                <div class="date">ELA-ES 2016</div>
+                                                <div class="circle"></div>
+                                                <div class="data">
+                                                    <div class="subject">Best Paper Award</div>
+                                                    <div class="text row">
+                                                        <div class="col-md-10">
+                                                          Award received in Natal, Brazil during the 3rd Latin-American School on Software Engineering (ELA-ES) in 2016.
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>
+
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </div>
+    </body>
+</html>
