header academic page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/magnific-popup.css">
         <link rel="stylesheet" href="css/style.css">
         <link id="theme-style" rel="stylesheet" href="css/styles/blue.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
 
 
