--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@
         <meta name="description" content="Anderson Uchôa Faculty Page" />
         <meta name="keywords" content="faculty profile, anderson uchoa, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
 
-        
+
         <link rel="shortcut icon" href="../favicon.ico">
 
         <!--CSS styles-->
@@ -61,7 +61,7 @@
 							<a href="http://www.inf.puc-rio.br/" target="_new"><img alt="image" width="230" src="img/logo_di.png"></a>
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
-                                <h2>Prof. Dr. Marcos Kalinowski</h2>
+                                <h2>Anderson Uchôa</h2>
                                 <h3>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</h3>
                             </div>
                         </div>
