new  academic page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Anderson Uchôa">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <meta name="description" content="Anderson Uchôa Faculty Page" />
+        <meta name="description" content="Anderson Uchôa Academic Page" />
         <meta name="keywords" content="faculty profile, anderson uchoa, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
 
         <link rel="shortcut icon" href="../favicon.ico">
