--- a/research.html
+++ b/research.html
@@ -2,14 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Marcos Kalinowski - Pontifical Catholic University of Rio de Janeiro</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="author" content="Anderson Uchôa">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      <title>Anderson Uchôa - Pontifical Catholic University of Rio de Janeiro</title>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <meta name="author" content="Anderson Uchôa">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <meta name="description" content="Anderson Uchôa Faculty Page" />
-        <meta name="keywords" content="faculty profile, anderson uchoa, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
-
+      <meta name="description" content="Anderson Uchôa Academic Page" />
+      <meta name="keywords" content="faculty profile, anderson uchoa, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
 
         <link rel="shortcut icon" href="../favicon.ico">
 
