--- a/publication.html
+++ b/publication.html
@@ -60,7 +60,7 @@
 							<a href="http://www.inf.puc-rio.br/" target="_new"><img alt="image" width="230" src="img/logo_di.png"></a>
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
-                                <h2>Prof. Dr. Marcos Kalinowski</h2>
+                                <h2>Anderson Uchôa</h2>
                                 <h3>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</h3>
                             </div>
                         </div>
