--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Marcos Kalinowski - Pontifical Catholic University of Rio de Janeiro</title>
+        <title>Anderson Uchôa - Pontifical Catholic University of Rio de Janeiro</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="author" content="Anderson Uchôa">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
