--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                                         <h3 class="title">Short Bio</h3>
                                         <p> MSc student in the <a href="http://www.inf.puc-rio.br" target="_new">Department of Informatics</a> at <a href="http://www.puc-rio.br" target="_new">PUC-Rio</a>.  The postgraduate program of the Department of Informatics is evaluated by the Brazilian Federal Agency for Postgraduate Education (CAPES) as being of international excellence (maximum score, 7). According to the <a href="http://www.timeshighereducation.com/world-university-rankings/2017/latin-america-university-rankings" target="_new">Times Higher Education Latin America University Rankings 2017</a>, PUC-Rio is one of the Top 10 universities in the continent and the leader in partnerships with industry.</p>
 
-                                        <p>Member of the <a href="http://opus.les.inf.puc-rio.br/wordpress/">OPUS Research Group </a> at PUC-Rio under the guidance of professor <a href="http://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Dr. Alessandro Garcia</a></p>
+                                        <p>Member of the <a href="http://opus.les.inf.puc-rio.br/wordpress/">OPUS Research Group </a> at PUC-Rio supervised by Prof. <a href="http://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Dr. Alessandro Garcia</a>.</p>
 
 
-                                        <p>He holds a degree in Software Engineering from <a href="http://ufc.br/" target="_new">UFC</a> (Federal University of Ceará with a “sandwich” period at <a href="http://www.di.uniroma1.it/" target="_new">La Sapienza (Sapienza University of Rome)</a>. </p>
+                                        <p>He holds a degree in Software Engineering from <a href="http://ufc.br/" target="_new">UFC</a> (Federal University of Ceará) with a sandwich period at <a href="http://www.di.uniroma1.it/" target="_new">La Sapienza (Sapienza University of Rome)</a>. </p>
 
                                         <p>His main research interests are code smells, software maintenance and evolution, software reuse and mining software repositories. His research are available in <a href="publication.html">publications</a>. </p>
 
