--- a/research.html
+++ b/research.html
@@ -151,7 +151,7 @@
 											<div class="col-sm-8 col-md-10">
 												<div class="meta">
 													<h3>Leveraging Gamification and Social Networks for Improving Prevention and Control of Zika</h3>
-													<p>Project Coordinators: Prof. Alexander Romanovsky and Dr. Paolo Missier <a href="http://www4.in.tum.de/~mendezfe/" target="_new">Newcastle University</a>, <a href="http://www.ic.uff.br/~kalinowski" target="_new">Marcos Kalinowski (PUC-Rio)</a>, <a href="http://mfelderer.at/" target="_new">Michael Felderer (University of Innsbruck)</a>, and <a href="http://www.iste.uni-stuttgart.de/se/menschen/wagner.html" target="_new">Stefan Wagner (University of Stuttgart)</a>.</p>
+													<p>Project Coordinators: Prof. Alexander Romanovsky and Dr. Paolo Missier <a href="http://www4.in.tum.de/~mendezfe/" target="_new">Newcastle University</a>.</p>
 													<p>Sponsors: British Council and Newton Fund </p>
 													<p>Partners: Federal University of Alagoas (Prof Baldoino Fonseca), Federal University of Pernambuco (Prof Leopoldo Teixeira), Pontifical Catholic University of Rio de Janeiro (Prof Alessandro Garcia) and Fundacao Oswaldo Cruz - Fiocruz (Dr Oswado Cruz), Brazil</p>
 													<p>Further Information: <a href=http://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html" target="_new">http://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html</a>.</p>
