--- a/research.html
+++ b/research.html
@@ -154,7 +154,7 @@
 													<p>Project Coordinators: Prof. Alexander Romanovsky and Dr. Paolo Missier <a href="http://www4.in.tum.de/~mendezfe/" target="_new">Newcastle University</a>.</p>
 													<p>Sponsors: British Council and Newton Fund </p>
 													<p>Partners: Federal University of Alagoas (Prof Baldoino Fonseca), Federal University of Pernambuco (Prof Leopoldo Teixeira), Pontifical Catholic University of Rio de Janeiro (Prof Alessandro Garcia) and Fundacao Oswaldo Cruz - Fiocruz (Dr Oswado Cruz), Brazil</p>
-													<p>Further Information: <a href=http://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html" target="_new">http://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html</a>.</p>
+													<p>Further Information: <a href=http://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html target="_new">http://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html</a>.</p>
 												</div>
 											</div>
 										</div>
