--- a/index.html
+++ b/index.html
@@ -14,22 +14,20 @@
 
         <!--CSS styles-->
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">  
         <link rel="stylesheet" href="css/perfect-scrollbar-0.4.5.min.css">
         <link rel="stylesheet" href="css/magnific-popup.css">
         <link rel="stylesheet" href="css/style.css">
-        <link id="theme-style" rel="stylesheet" href="css/styles/blue.css">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link id="theme-style" rel="stylesheet" href="css/styles/default.css">
 
-
-
+        
         <!--/CSS styles-->
         <!--Javascript files-->
         <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
         <script type="text/javascript" src="js/TweenMax.min.js"></script>
         <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
         <script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
-
+        
         <script type="text/javascript" src="js/modernizr.custom.63321.js"></script>
         <script type="text/javascript" src="js/jquery.dropdownit.js"></script>
 
