--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="css/perfect-scrollbar-0.4.5.min.css">
         <link rel="stylesheet" href="css/magnific-popup.css">
         <link rel="stylesheet" href="css/style.css">
-        <link id="theme-style" rel="stylesheet" href="css/styles/default.css">
+        <link id="theme-style" rel="stylesheet" href="css/styles/blue.css">
 
         
         <!--/CSS styles-->
