--- a/publication.html
+++ b/publication.html
@@ -227,7 +227,7 @@
                                                             <a href="http://vem2017.ufu.br/artigos/Uchoa_et_al_2017.pdf" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i>
                                                             </a>
-                                                            <a href="publications/Do Coupling Metrics Help Characterize Critical Components in Component-based SPL? An Empirical Study.pdf" class="tooltips" title="Download" target="_blank">
+                                                            <a href="publications/Do Coupling Metrics Help Characterize Critical Components in Component-based SPL?.pdf" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
                                                             
