--- a/publication.html
+++ b/publication.html
@@ -209,7 +209,7 @@
 
                                                         <h4 class="pubtitle">DyMMer-NFP: Modeling Non-functional Properties and Multiple Context Adaptation Scenarios in Software Product Lines</h4>
                                                         <div class="pubauthor"><strong>Anderson G Uchôa</strong>, Luan P Lima, Carla IM Bezerra, José Maria Monteiro, Rossana MC Andrade</div>
-                                                     <div class="pubcite"><span class="label label-info">Conference Paper</span> International Conference on Software Reuse (ICSR), May 2017, Pages 175-183</div>     
+                                                      <div class="pubcite"><span class="label label-info">Conference Paper</span> International Conference on Software Reuse (ICSR), May 2017, Pages 175-183</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
@@ -227,7 +227,7 @@
                                                             <a href="http://vem2017.ufu.br/artigos/Uchoa_et_al_2017.pdf" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i>
                                                             </a>
-                                                            <a href="publications/Do Coupling Metrics Help Characterize Critical Components in Component-based SPL?.pdf" class="tooltips" title="Download" target="_blank">
+                                                            <a href="publications/Do_Coupling_Metrics_Help_Characterize_Critical_Components_in_Component-based_SPL.pdf" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
                                                             
