--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 											href="http://opus.les.inf.puc-rio.br/wordpress/">OPUS
 											Research Group </a> at PUC-Rio supervised by Prof. <a
 											href="http://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Dr.
-											Alessandro Garcia</a> from the Software Engineering Laboratory of
+											Alessandro Garcia</a> which is part of the Software Engineering Laboratory of
 										PUC-Rio. His main research interests are code smells, software
 										maintenance and evolution, software reuse and mining software
 										repositories. His research are available in <a
