--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div id="main-nav">
 				<div id="nav-container">
 					<div id="profile" class="clearfix">
-						<a href="http://www.inf.puc-rio.br/" target="_new"><img
+						<a href="https://www.inf.puc-rio.br/" target="_new"><img
 							alt="image" width="230" src="img/logo_di.png"></a>
 						<div class="portrate hidden-xs"></div>
 						<div class="title">
@@ -100,7 +100,7 @@
 								<div class="text">Publications</div>
 						</a></li>
 
-						<li><a href="http://lattes.cnpq.br/3740664626762609"
+						<li><a href="https://lattes.cnpq.br/3740664626762609"
 							target="_new">
 								<div class="icon icon-download-alt"></div>
 								<div class="text">CV Lattes (in Portuguese)</div>
@@ -136,14 +136,14 @@
 									<h3 class="title">Short Bio</h3>
 									<p>
 										Anderson Uchôa is a M.Sc. student in the <a
-											href="http://www.inf.puc-rio.br" target="_new">Department
-											of Informatics</a> at <a href="http://www.puc-rio.br"
+											href="https://www.inf.puc-rio.br" target="_new">Department
+											of Informatics</a> at <a href="https://www.puc-rio.br"
 											target="_new">PUC-Rio</a>. The postgraduate program of the
 										Department of Informatics is evaluated by the Brazilian
 										Federal Agency for Postgraduate Education (CAPES) as being of
 										international excellence (maximum score, 7). According to the
 										<a
-											href="http://www.timeshighereducation.com/world-university-rankings/2017/latin-america-university-rankings"
+											href="https://www.timeshighereducation.com/world-university-rankings/2017/latin-america-university-rankings"
 											target="_new">Times Higher Education Latin America
 											University Rankings 2017</a>, PUC-Rio is one of the Top 10
 										universities in the continent and the leader in partnerships
@@ -153,18 +153,18 @@
 									<p>
 
 										He holds a BSc degree in Software Engineering from <a
-											href="http://ufc.br/" target="_new">UFC</a> (Federal
+											href="https://ufc.br/" target="_new">UFC</a> (Federal
 										University of Ceará) in cooperation with the <a
-											href="http://www.di.uniroma1.it/" target="_new">La
+											href="https://www.di.uniroma1.it/" target="_new">La
 											Sapienza (Sapienza University of Rome)</a>.
 									</p>
 
 
 									<p>
 										Anderson Uchôa is a member of the <a
-											href="http://opus.les.inf.puc-rio.br/wordpress/">OPUS
+											href="https://opus.les.inf.puc-rio.br/wordpress/">OPUS
 											Research Group </a> at PUC-Rio supervised by Prof. <a
-											href="http://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Dr.
+											href="https://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Dr.
 											Alessandro Garcia</a> which is part of the Software Engineering Laboratory of
 										PUC-Rio. His main research interests are code smells, software
 										maintenance and evolution, software reuse and mining software
@@ -176,7 +176,7 @@
 									<p>Feel free to contact me. Specially if you are a
 										researcher searching for collaboration.</p>
 
-									<a href="http://www.inf.puc-rio.br/" target="_new">Departamento
+									<a href="https://www.inf.puc-rio.br/" target="_new">Departamento
 										de Informática - PUC-Rio</a><br> Rua Marquês de São Vicente
 									225, 22451-900, Gavea, Rio de Janeiro, RJ, Brazil<br> <strong><i
 										class="icon-envelope"></i>&nbsp;&nbsp;</strong>auchoa [at]
@@ -225,7 +225,7 @@
 											<div class="description">
 												<p class="waht">M.Sc. in Software Engineering, PUC-Rio</p>
 												<p class="where">
-													Advisor: <a href="http://www-di.inf.puc-rio.br/~afgarcia//"
+													Advisor: <a href="https://www-di.inf.puc-rio.br/~afgarcia//"
 														target="_new">Alessandro Garcia</a>
 												</p>
 											</div>
@@ -240,7 +240,7 @@
 													a sandwich period at Sapienza University of Rome
 													(SAPIENZA).</p>
 												<p class="where">
-													Advisor: <a href="http://lattes.cnpq.br/4277471687235814"
+													Advisor: <a href="https://lattes.cnpq.br/4277471687235814"
 														target="_new">Carla Ilane</a>
 												</p>
 											</div>
