--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									<h3 class="title">Short Bio</h3>
 									<p>
 										Anderson Uchôa is a M.Sc. student in the <a
-											href="https://www.inf.puc-rio.br" target="_new">Department
+											href="http://www.inf.puc-rio.br" target="_new">Department
 											of Informatics</a> at <a href="https://www.puc-rio.br"
 											target="_new">PUC-Rio</a>. The postgraduate program of the
 										Department of Informatics is evaluated by the Brazilian
@@ -153,7 +153,7 @@
 									<p>
 
 										He holds a BSc degree in Software Engineering from <a
-											href="https://ufc.br/" target="_new">UFC</a> (Federal
+											href="http://ufc.br/" target="_new">UFC</a> (Federal
 										University of Ceará) in cooperation with the <a
 											href="https://www.di.uniroma1.it/" target="_new">La
 											Sapienza (Sapienza University of Rome)</a>.
@@ -162,9 +162,9 @@
 
 									<p>
 										Anderson Uchôa is a member of the <a
-											href="https://opus.les.inf.puc-rio.br/wordpress/">OPUS
+											href="http://opus.les.inf.puc-rio.br/wordpress/">OPUS
 											Research Group </a> at PUC-Rio supervised by Prof. <a
-											href="https://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Dr.
+											href="http://www-di.inf.puc-rio.br/~afgarcia//" target="_new">Dr.
 											Alessandro Garcia</a> which is part of the Software Engineering Laboratory of
 										PUC-Rio. His main research interests are code smells, software
 										maintenance and evolution, software reuse and mining software
@@ -176,7 +176,7 @@
 									<p>Feel free to contact me. Specially if you are a
 										researcher searching for collaboration.</p>
 
-									<a href="https://www.inf.puc-rio.br/" target="_new">Departamento
+									<a href="http://www.inf.puc-rio.br/" target="_new">Departamento
 										de Informática - PUC-Rio</a><br> Rua Marquês de São Vicente
 									225, 22451-900, Gavea, Rio de Janeiro, RJ, Brazil<br> <strong><i
 										class="icon-envelope"></i>&nbsp;&nbsp;</strong>auchoa [at]
@@ -225,7 +225,7 @@
 											<div class="description">
 												<p class="waht">M.Sc. in Software Engineering, PUC-Rio</p>
 												<p class="where">
-													Advisor: <a href="https://www-di.inf.puc-rio.br/~afgarcia//"
+													Advisor: <a href="http://www-di.inf.puc-rio.br/~afgarcia//"
 														target="_new">Alessandro Garcia</a>
 												</p>
 											</div>
@@ -240,7 +240,7 @@
 													a sandwich period at Sapienza University of Rome
 													(SAPIENZA).</p>
 												<p class="where">
-													Advisor: <a href="https://lattes.cnpq.br/4277471687235814"
+													Advisor: <a href="http://lattes.cnpq.br/4277471687235814"
 														target="_new">Carla Ilane</a>
 												</p>
 											</div>
