update publications and links

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<div class="text">Publications</div>
 						</a></li>
 
-						<li><a href="https://lattes.cnpq.br/3740664626762609"
+						<li><a href="http://lattes.cnpq.br/3740664626762609"
 							target="_new">
 								<div class="icon icon-download-alt"></div>
 								<div class="text">CV Lattes (in Portuguese)</div>
