--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
 											</div>
 											<div class="description">
 												<p class="waht">Bachelor in Software Engineering</p>
-												<p class="where">Federal University of Ceará (UFC) with
-													a sandwich period at Sapienza University of Rome
+												<p class="where">Federal University of Ceará (UFC) in cooperation with the Sapienza University of Rome
 													(SAPIENZA).</p>
 												<p class="where">
 													Advisor: <a href="http://lattes.cnpq.br/4277471687235814"
