--- a/index.html
+++ b/index.html
@@ -271,6 +271,16 @@
 											</div>
 										</li>
 
+										<li class="open">
+											<div class="date">CAPES's Scholarship Grant</div>
+											<div class="circle"></div>
+											<div class="data">
+												<div class="subject">Best Paper Award</div>
+												<div class="text row">
+													<div class="col-md-10">I received a scholarship from Brazilian Federal Agency for Postgraduate Education (CAPES) to support my M.Sc. research.</div>
+												</div>
+											</div>
+										</li>
 									</ul>
 								</div>
 							</div>
