--- a/index.html
+++ b/index.html
@@ -272,12 +272,23 @@
 										</li>
 
 										<li class="open">
-											<div class="date">Scholarship Grant</div>
+											<div class="date">Scholarship Grant 2017</div>
 											<div class="circle"></div>
 											<div class="data">
 												<div class="subject">CAPES's Scholarship Grant</div>
 												<div class="text row">
 													<div class="col-md-10">I received a scholarship from Brazilian Federal Agency for Postgraduate Education (CAPES) to support my M.Sc. research.</div>
+												</div>
+											</div>
+										</li>
+										
+										<li class="open">
+											<div class="date">Scholarship Grant 2014</div>
+											<div class="circle"></div>
+											<div class="data">
+												<div class="subject">CAPES's Scholarship Grant</div>
+												<div class="text row">
+													<div class="col-md-10">I received a scholarship from Brazilian Federal Agency for Postgraduate Education (CAPES) to support my B.Sc academic exchange.</div>
 												</div>
 											</div>
 										</li>
