--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
 												<p class="waht">Bachelor in Software Engineering</p>
 												<p class="where">Federal University of Ceará (UFC) in cooperation with the Sapienza University of Rome
 													(SAPIENZA).</p>
+													<p class="where">
+													Grade Point Average (GPA): 8.2/10.
+													</p>
 												<p class="where">
 													Advisor: <a href="http://lattes.cnpq.br/4277471687235814"
 														target="_new">Carla Ilane</a>
