--- a/research.html
+++ b/research.html
@@ -177,6 +177,12 @@
 											</div>
 										</div>
 									</div>
+
+									<div class="title text-center">
+										<h3>Ongoing Research Projects</h3>
+									</div>
+
+
 									<div class="details">
 										<p>Brazilian population has not responded well to the
 											prevention programs to combat arboviral diseases, such as
