update research project

--- a/research.html
+++ b/research.html
@@ -146,7 +146,7 @@
 					<div class="section color-1">
 						<div class="section-container">
 							<div class="title text-center">
-								<h3>Ongoing Research Projects</h3>
+								<h3>Completed Research Projects</h3>
 							</div>
 							<p>Click on each of the Projects below to see its
 								description.</p>
