--- a/research.html
+++ b/research.html
@@ -62,7 +62,7 @@
 			<div id="main-nav">
 				<div id="nav-container">
 					<div id="profile" class="clearfix">
-						<a href="http://www.inf.puc-rio.br/" target="_new"><img
+						<a href="https://www.inf.puc-rio.br/" target="_new"><img
 							alt="image" width="230" src="img/logo_di.png"></a>
 						<div class="portrate hidden-xs"></div>
 						<div class="title">
@@ -88,7 +88,7 @@
 						</a></li>
 
 
-						<li><a href="http://lattes.cnpq.br/3740664626762609"
+						<li><a href="https://lattes.cnpq.br/3740664626762609"
 							target="_new">
 								<div class="icon icon-download-alt"></div>
 								<div class="text">CV Lattes (in Portuguese)</div>
@@ -166,7 +166,7 @@
 												</p>
 												<p>
 													Project Coordinators: Prof. Alexander Romanovsky and Dr.
-													Paolo Missier <a href="http://www.ncl.ac.uk/" target="_new">Newcastle
+													Paolo Missier <a href="https://www.ncl.ac.uk/" target="_new">Newcastle
 														University</a>.
 												</p>
 												<p>Sponsors: British Council and Newton Fund</p>
@@ -177,8 +177,8 @@
 													Cruz - Fiocruz (Dr Oswado Cruz), Brazil</p>
 												<p>
 													Further Information: <a
-														href=http://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html
-														target="_new">http://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html</a>.
+														href=https://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html
+														target="_new">https://www.ncl.ac.uk/computing/research/projects/leveraginggamificationandsocialnetworksforimprovingpreventionandcontrol.html</a>.
 												</p>
 											</div>
 										</div>
@@ -228,7 +228,7 @@
 												
 												<p>
 													Project Coordinators: Prof. Dr .Alessandro Garcia and Prof.
-													Dr. Alexander Romanovsky <a href="http://www.ncl.ac.uk/"
+													Dr. Alexander Romanovsky <a href="https://www.ncl.ac.uk/"
 														target="_new">Newcastle University</a>.
 												</p>
 												<p>Sponsors: British Council and Newton Fund</p>
