--- a/publication.html
+++ b/publication.html
@@ -56,7 +56,7 @@
                 <div id="main-nav">
                     <div id="nav-container">
                         <div id="profile" class="clearfix">
-							<a href="http://www.inf.puc-rio.br/" target="_new"><img alt="image" width="230" src="img/logo_di.png"></a>
+							<a href="https://www.inf.puc-rio.br/" target="_new"><img alt="image" width="230" src="img/logo_di.png"></a>
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
                                 <h2>Anderson Uchôa</h2>
@@ -85,7 +85,7 @@
                               </a>
                             </li>
                             <li>
-                              <a href="http://lattes.cnpq.br/3740664626762609" target="_new">
+                              <a href="https://lattes.cnpq.br/3740664626762609" target="_new">
                                   <div class="icon icon-download-alt"></div>
                                   <div class="text">CV Lattes (in Portuguese)</div>
                               </a>
@@ -115,7 +115,7 @@
                                     <h2 class="title">Publications</h2>
                                     <div class="row">
                                         <div class="col-md-12">
-							 <p>A complete list of my publications with abstracts, doi link to publisher (when available), and author version eprints can be found below. You may also want to check out my profile at <a href="https://www.researchgate.net/profile/Anderson_Uchoa" target="_new">Research Gate</a>, <a href="https://scholar.google.com.br/citations?user=_bwg28kAAAAJ&hl=en" target="_new">Google Scholar</a>, <a href="http://dblp.uni-trier.de/search/publ?q=author:Anderson_G._Uch%C3%B4a:" target="_new">DBLP</a>, and <a href="http://lattes.cnpq.br/3740664626762609" target="_new">Lattes (in Portuguese)</a>. Feel free to contact me if you want to further discuss the ideas of any of the papers.</p>
+							 <p>A complete list of my publications with abstracts, doi link to publisher (when available), and author version eprints can be found below. You may also want to check out my profile at <a href="https://www.researchgate.net/profile/Anderson_Uchoa" target="_new">Research Gate</a>, <a href="https://scholar.google.com.br/citations?user=_bwg28kAAAAJ&hl=en" target="_new">Google Scholar</a>, <a href="https://dblp.uni-trier.de/search/publ?q=author:Anderson_G._Uch%C3%B4a:" target="_new">DBLP</a>, and <a href="https://lattes.cnpq.br/3740664626762609" target="_new">Lattes (in Portuguese)</a>. Feel free to contact me if you want to further discuss the ideas of any of the papers.</p>
                                             <p><font color=red>(the list takes a few seconds to load)</font></p>   
 					    </div>
                                                <script src="https://bibbase.org/show?bib=https%3A%2F%2Fanderson-uchoa.github.io%2Fpublications%2FUchoaPapers.bib&jsonp=1"></script>
