--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
 												<span class="degree">M.Sc.</span> <span class="year">Present</span>
 											</div>
 											<div class="description">
-												<p class="waht">M.Sc. in Software Engineering, PUC-Rio</p>
+												<p class="what">M.Sc. in Software Engineering, PUC-Rio</p>
+												<p class="where">
+													Grade Point Average (GPA): 9/10.
+													</p>
 												<p class="where">
 													Advisor: <a href="https://www-di.inf.puc-rio.br/~afgarcia//"
 														target="_new">Alessandro Garcia</a>
@@ -235,10 +238,10 @@
 												<span class="degree">B.Sc.</span><span class="year">2016</span>
 											</div>
 											<div class="description">
-												<p class="waht">Bachelor in Software Engineering</p>
+												<p class="what">Bachelor in Software Engineering</p>
 												<p class="where">Federal University of Ceará (UFC) in cooperation with the Sapienza University of Rome
 													(SAPIENZA).</p>
-													<p class="where">
+																<p class="where">
 													Grade Point Average (GPA): 8.2/10.
 													</p>
 												<p class="where">
