--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div id="main-nav">
 				<div id="nav-container">
 					<div id="profile" class="clearfix">
-						<a href="https://www.inf.puc-rio.br/" target="_new"><img
+						<a href="http://www.inf.puc-rio.br/" target="_new"><img
 							alt="image" width="230" src="img/logo_di.png"></a>
 						<div class="portrate hidden-xs"></div>
 						<div class="title">
@@ -100,7 +100,7 @@
 								<div class="text">Publications</div>
 						</a></li>
 
-						<li><a href="https://lattes.cnpq.br/3740664626762609"
+						<li><a href="http://lattes.cnpq.br/3740664626762609"
 							target="_new">
 								<div class="icon icon-download-alt"></div>
 								<div class="text">CV Lattes (in Portuguese)</div>
@@ -136,7 +136,7 @@
 									<h3 class="title">Short Bio</h3>
 									<p>
 										Anderson Uchôa is a M.Sc. student in the <a
-											href="https://www.inf.puc-rio.br" target="_new">Department
+											href="http://www.inf.puc-rio.br" target="_new">Department
 											of Informatics</a> at <a href="https://www.puc-rio.br"
 											target="_new">PUC-Rio</a>. The postgraduate program of the
 										Department of Informatics is evaluated by the Brazilian
@@ -153,7 +153,7 @@
 									<p>
 
 										He holds a BSc degree in Software Engineering from <a
-											href="https://ufc.br/" target="_new">UFC</a> (Federal
+											href="http://www.ufc.br/" target="_new">UFC</a> (Federal
 										University of Ceará) in cooperation with the <a
 											href="https://www.di.uniroma1.it/" target="_new">La
 											Sapienza (Sapienza University of Rome)</a>.
@@ -228,7 +228,7 @@
 													Grade Point Average (GPA): 9/10.
 													</p>
 												<p class="where">
-													Advisor: <a href="https://www-di.inf.puc-rio.br/~afgarcia//"
+													Advisor: <a href="http://www-di.inf.puc-rio.br/~afgarcia//"
 														target="_new">Alessandro Garcia</a>
 												</p>
 											</div>
@@ -245,7 +245,7 @@
 													Grade Point Average (GPA): 8.2/10.
 													</p>
 												<p class="where">
-													Advisor: <a href="https://lattes.cnpq.br/4277471687235814"
+													Advisor: <a href="http://lattes.cnpq.br/4277471687235814"
 														target="_new">Carla Ilane</a>
 												</p>
 											</div>
