--- a/publication.html
+++ b/publication.html
@@ -74,7 +74,7 @@
                             <li>
                               <a href="research.html">
                                 <div class="icon icon-book"></div>
-                                <div class="text">Research</div>
+                                <div class="text">Research Projects</div>
                               </a>
                             </li>
 
