--- a/index.html
+++ b/index.html
@@ -278,15 +278,14 @@
 											<div class="date">Award 2019</div>
 											<div class="circle"></div>
 											<div class="data">
-												<div class="subject">SIGSOFT CAPS Award</div>
+												<div class="subject">SIGSOFT CAPS Travel Grant Award</div>
 												<div class="text row">
 													<div class="col-md-2">
 														<img alt="image" class="thumbnail img-responsive"
 															src="img/personal/acm-sigsoft.jpg">
 													</div>
 
-													<div class="col-md-10">I received a SIGSOFT CAPS Award Association for Computing Machinery (ACM)
-														to support my travel for ICSE 2019.</div>
+													<div class="col-md-10">I received a SIGSOFT CAPS Travel Grand Award from Association for Computing Machinery (ACM) to attend ICSE 2019.</div>
 												</div>
 											</div>
 
