--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							<div class="row">
 
 								<div class="clearfix visible-sm visible-xs"></div>
-								<div class="col-sm-8 col-md-10">
+								<div class="col-md-10 col-md-offset-1">
 									<h3 class="title">Short Bio</h3>
 									<p>
 										Anderson Uchôa is a PhD student in the <a
