--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
 
 										<li class="open">
-											<div class="date">Student Volunteer 2020</div>
+											<div class="date">Student Volunteer'20</div>
 											<div class="circle"></div>
 											<div class="data">
 												<div class="subject">Student Volunteer for ICSA 2020</div>
@@ -297,7 +297,7 @@
 											</div>
 
 										</li>
-
+										
 										<li class="open">
 											<div class="date">Award 2019</div>
 											<div class="circle"></div>
@@ -338,7 +338,7 @@
 
 
 										<li class="open">
-											<div class="date">Student Volunteer 2018</div>
+											<div class="date">Student Volunteer'18</div>
 											<div class="circle"></div>
 											<div class="data">
 												<div class="subject">Student Volunteer for ICSE 2018</div>
