--- a/publication.html
+++ b/publication.html
@@ -49,50 +49,48 @@
     </head>
     <body>
 
-        <div id="wrapper">
-            <a href="#sidebar" class="mobilemenu"><i class="icon-reorder"></i></a>
+	<div id="wrapper">
+		<a href="#sidebar" class="mobilemenu"><i class="icon-reorder"></i></a>
 
-            <div id="sidebar">
-                <div id="main-nav">
-                    <div id="nav-container">
-                        <div id="profile" class="clearfix">
-							<a href="https://www.inf.puc-rio.br/" target="_new"><img alt="image" width="230" src="img/logo_di.png"></a>
-                            <div class="portrate hidden-xs"></div>
-                            <div class="title">
-                                <h2>Anderson Uchôa</h2>
-                                <h3>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</h3>
-                            </div>
-                        </div>
-                        <ul id="navigation">
-                            <li>
-                              <a href="index.html">
-                                <div class="icon icon-user"></div>
+		<div id="sidebar">
+			<div id="main-nav">
+				<div id="nav-container">
+					<div id="profile" class="clearfix">
+						<a href="https://www.inf.puc-rio.br/" target="_new"><img
+							alt="image" width="230" src="img/logo_di.png"></a>
+						<div class="portrate hidden-xs"></div>
+						<div class="title">
+							<h2>Anderson Uchôa</h2>
+							<h3>Pontifical Catholic University of Rio de Janeiro
+								(PUC-Rio)</h3>
+						</div>
+					</div>
+					<ul id="navigation">
+						<li><a href="index.html">
+								<div class="icon icon-user"></div>
 								<div class="text">About Me</div>
-                              </a>
-                            </li>
+						</a></li>
 
-                            <li>
-                              <a href="research.html">
-                                <div class="icon icon-book"></div>
-                                <div class="text">Research Projects</div>
-                              </a>
-                            </li>
+						<li><a href="research.html">
+								<div class="icon icon-book"></div>
+								<div class="text">Research Projects</div>
+						</a></li>
 
-                            <li class="currentmenu">
-                              <a href="publication.html">
-                                <div class="icon icon-edit"></div>
-                                <div class="text">Publications</div>
-                              </a>
-                            </li>
-                            <li>
-                              <a href="http://lattes.cnpq.br/3740664626762609" target="_new">
-                                  <div class="icon icon-download-alt"></div>
-                                  <div class="text">CV Lattes (in Portuguese)</div>
-                              </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+						<li class="currentmenu"><a href="publication.html">
+								<div class="icon icon-edit"></div>
+								<div class="text">Publications</div>
+						</a></li>
+
+
+						<li><a href="http://lattes.cnpq.br/3740664626762609"
+							target="_new">
+								<div class="icon icon-download-alt"></div>
+								<div class="text">CV Lattes (in Portuguese)</div>
+						</a></li>
+					</ul>
+				</div>
+			</div>
+
 
                 <div class="social-icons">
                     <ul>
