--- a/index.html
+++ b/index.html
@@ -285,7 +285,26 @@
 									</div>
 									<ul class="timeline">
 
+										<li class="open">
+											<div class="date">Student Volunteer'20</div>
+											<div class="circle"></div>
+											<div class="data">
+												<div class="subject">Student Volunteer for ICSE 2020</div>
+												<div class="text row">
+													<div class="col-md-2">
+														<img alt="image" class="thumbnail img-responsive"
+															src="img/personal/icse-2020.png">
+													</div>
 
+													<div class="col-md-10">I received a grand to be part
+														of the student volunteers who have been selected to
+														support the International Conference on Software
+														Engineering (ICSE 2020) - Virtual Format.</div>
+												</div>
+											</div>
+
+										</li>
+										
 										<li class="open">
 											<div class="date">Student Volunteer'20</div>
 											<div class="circle"></div>
@@ -294,7 +313,7 @@
 												<div class="text row">
 													<div class="col-md-2">
 														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/icsa-2020.png">
+															src="img/personal/icsa-20202.png">
 													</div>
 
 													<div class="col-md-10">I received a grand to be part
